--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
 /* styles.css */
 
 /* Add styles here to customize the appearance of your app */
+table {
+    width: 100%;
+    height: 200px;
+    border: 1px solid red;
+}
